--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Remondo.Database.Repositories.Tests\packages.config" />
+  <repository path="..\Remondo.Database.Repositories\packages.config" />
   <repository path="..\Remondo.Database\packages.config" />
 </repositories>
